[package]
name = "spelunkicons"
version = "0.1.0"
authors = ["garebear <mail@spelunky.fyi>"]
edition = "2021"

[lib]
name = "spelunkicons"
path = "src/lib.rs"


[[bin]]
name = "spelunkicons"
path = "src/main.rs"

[dependencies]
crc32fast = "1.3.1"
bitvec = "1.0.0"
clap = { version = "3.0.13", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
image = "0.23.14"
imageproc = "0.22.0"