[package]
name = "spelunkicons"
version = "0.1.0"
authors = ["garebear <mail@spelunky.fyi>"]
edition = "2021"
default-run = "spelunkicons"

[lib]
name = "spelunkicons"
path = "src/lib.rs"


[[bin]]
name = "spelunkicons"
path = "src/main.rs"

[[bin]]
name = "bruteforce"
path = "src/bruteforce.rs"

[dependencies]
bitvec = "1.0.0"
clap = { version = "3.0.13", features = ["derive"] }
crc32fast = "1.3.1"
hyper = { version = "0.14", features = ["full"] }
image = "0.23.14"
imageproc = "0.22.0"
indexmap = "1.8.0"
itertools = "0.10.3"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"